# oliver

./: .cursorrules  .env.example  .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cursor/rules/: github.mdc
.cursor/rules/000-global/: RULE.md
.cursor/rules/100-api-rust/: RULE.md
.cursor/rules/200-web-nextjs/: RULE.md
.github/workflows/: build.yml  deploy.yml
apps/api/: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md  package.json  tsconfig.json
apps/api/src/: error.rs  index.ts  lambda.rs  lambda_main.rs  lib.rs  main.rs  types.ts
apps/api/src/config/: auth.rs  database.rs  index.ts  mod.rs  server.rs  x402.rs
apps/api/src/domain/entities/: user.entity.ts
apps/api/src/domain/repositories/: session-key.repository.ts  user.repository.ts
apps/api/src/features/auth/: handlers.ts  routes.ts  schemas.ts  service.ts  types.ts
apps/api/src/features/users/: handlers.ts  routes.ts  schemas.ts  service.ts
apps/api/src/features/users/prompts/: oliver.ts
apps/api/src/features/users/services/agent/: personality.ts  specialist.ts
apps/api/src/features/users/types/: agent.ts
apps/api/src/handlers/: auth.rs  health.rs  mod.rs  orders.rs  products.rs  users.rs
apps/api/src/infrastructure/: dependencies.ts  middleware.ts  types.ts
apps/api/src/lib/: AiAgent.ts  FacilitatorManager.ts  PaymentManager.ts  config.ts  encryption.ts  prisma.ts  privy.ts  wallet.ts
apps/api/src/lib/error/: classes.ts  handler.ts
apps/api/src/middlewares/: auth.ts  payment.ts
apps/api/src/models/: db.rs  mapper.rs  mod.rs  stock.rs
apps/api/src/repositories/: index.ts  session-key.repository.ts  transaction.repository.ts  user.repository.ts
apps/api/src/repository/: mod.rs  payment.rs  user.rs  user_mock.rs
apps/api/src/routes/: health.ts  mod.rs  payment.ts  product.ts  transaction.ts  users.ts
apps/api/src/services/: mod.rs  payment.rs  transaction.service.ts  user.service.ts
apps/api/src/shared/errors/: authErrorHandler.ts  constants.ts  response.ts
apps/api/src/shared/middleware/: errorHandler.ts
apps/api/src/shared/utils/: cookie.ts
apps/api/src/utils/: auth.rs  config.ts  dynamic_jwt.rs  encryption.ts  facilitator.rs  mod.rs  session.rs  validation.rs  wallet.ts  x402.rs
apps/api/tests/: health.rs  orders.rs  products.rs  users.rs
apps/api/tests/common/: mod.rs
apps/api2/: Dockerfile  package.json  tsconfig.json  vitest.config.ts
apps/api2/src/: index.ts
apps/api2/src/config/: index.ts
apps/doc/: package.json
apps/docs/: AGENTS.md  docusaurus.config.ts  package.json  sidebars.ts
apps/docs/docs/: overall-structure.md
apps/facilitator-api/: Cargo.toml  README.md
apps/facilitator-api/src/: config.rs  main.rs
apps/merchant-api/: .gitignore  Cargo.toml  Makefile  README.md
apps/merchant-api/src/: config.rs  error.rs  lambda.rs  lib.rs  main.rs  state.rs  types.rs
apps/merchant-api/src/config/: mod.rs  server.rs  x402.rs
apps/merchant-api/src/handlers/: health.rs  mod.rs  orders.rs  products.rs  resource.rs
apps/merchant-api/src/models/: amount.rs  db.rs  mapper.rs  mod.rs
apps/merchant-api/src/repository/: mod.rs  payment.rs  product.rs
apps/merchant-api/src/routes/: mod.rs
apps/merchant-api/src/services/: payment.rs
apps/merchant-api/src/test_helpers/: mod.rs
apps/merchant-api/src/utils/: facilitator.rs  mod.rs  order.rs
apps/merchant-api/tests/: health.rs  orders.rs  products.rs
apps/merchant-api/tests/common/: mod.rs
apps/web/: .env.local  .gitignore  components.json  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
apps/web/prisma/: schema.prisma  seed.ts
apps/web1/: README.md  next.config.ts  package.json
cargo-workspace/: Cargo.toml
docs/: docusaurus.config.ts  package.json  sidebars.ts
docs/docs/01-introduction/: 01-welcome.md  03-ai-redefined.md
docs/docs/02-architecture/: 04-gatekeeper-model.md
docs/docs/05-use-cases/: 01-physical-replenishment.md  02-on-demand-workforce.md
docs/docs/06-roadmap/: 02-phase2-smart-accounts.md  03-phase3-global-infrastructure.md
docs/docs/note/: 01-note.md  02-architecture.md  04-erc-eip.md
supabase/: config.toml
(+339 files in other folders)
