[package]
name = "api"
version = "0.1.0"
edition = "2021"

# Lambda関数用のバイナリターゲット
[[bin]]
name = "bootstrap"
path = "src/lambda_main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = { version = "0.4", features = ["util", "make"] }
hyper = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "json"] }
typeshare = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = "0.21"
async-trait = "0.1"
lambda_runtime = "0.8"
lambda_http = "0.9"
bytes = "1.0"
tower-http = { version = "0.6", features = ["cors", "util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
mockall = "0.13"

# Lambda用のビルド設定
[profile.release]
opt-level = "z"     # 最適化レベル（サイズ優先）
lto = true          # Link Time Optimization
codegen-units = 1   # コード生成単位
strip = true        # シンボル情報を削除

