[package]
name = "api"
version = "0.1.0"
edition = "2021"

# Lambda関数用のバイナリターゲット
[[bin]]
name = "bootstrap"
path = "src/lambda_main.rs"

[features]
default = ["mock-data"]
mock-data = []

[dependencies]
axum = { version = "0.7", features = ["macros", "json", "multipart"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = { version = "0.4", features = ["util", "make"] }
hyper = { version = "1.0", features = ["full"] }
http = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "json"] }
typeshare = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = "0.21"
async-trait = "0.1"
lambda_runtime = "0.8"
lambda_http = "0.9"
bytes = "1.0"
tower-http = { version = "0.6", features = ["cors", "util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
jsonwebtoken = "9.3"
axum-extra = { version = "0.9", features = ["cookie"] }
time = "0.3"
rsa = { version = "0.9", features = ["pem"] }
pem = "3.0"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
mockall = "0.13"

